07_semaphore_deploy.yml
# semaphore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: semaphore-data
              mountPath: /var/lib/semaphore
            - name: semaphore-config
              mountPath: /etc/semaphore
            - name: semaphore-tmp-config
              mountPath: /tmp/semaphore
            - name: requirements-txt
              mountPath: /etc/semaphore/requirements.txt
              subPath: requirements.txt
            - name: requirements-yml
              mountPath: /etc/semaphore/requirements.yml
              subPath: requirements.yml

      volumes:
        - name: semaphore-tmp-config
          emptyDir: {}
        - name: semaphore-data
          persistentVolumeClaim:
            claimName: semaphore-data-pvc
        - name: semaphore-config
          persistentVolumeClaim:
            claimName: semaphore-config-pvc
        - name: requirements-txt
          configMap:
            name: semaphore-requirements
            items:
              - key: requirements.txt
                path: requirements.txt
        - name: requirements-yml
          configMap:
            name: semaphore-requirements
            items:
              - key: requirements.yml
                path: requirements.yml
