05_mysql_service.yml
# mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: __NAMESPACE__
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
