08_semaphore_service.yml
# semaphore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: __NAMESPACE__
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: semaphore
