09_semaphore_ingress.yml
# semaphore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semaphore-ingress
  namespace: __NAMESPACE__
  annotations:
    kubernetes.io/spec.ingressClassName: traefik
spec:
  rules:
    - host: __SEMAPHORE_HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: semaphore
                port:
                  number: 3000
